fix wrong color

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -11,7 +11,7 @@
 		--text 0.2s ease;
 
 	&.light {
-		--background-center: #{colors.get("light")};
+		--background-center: #{colors.get("white")};
 		--background-edges: #{colors.get("gray")};
 		--text: #{colors.get("dark")};
 	}
